objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <description>AutoRABIT Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>1-Lead</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>2-Subscriber</fullName>
        </values>
        <values>
            <fullName>4-MQL</fullName>
        </values>
        <values>
            <fullName>5-Intro Call Scheduled</fullName>
        </values>
        <values>
            <fullName>6-Intro Call Held</fullName>
        </values>
        <values>
            <fullName>7-SAL</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AR_End_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if ARM/Vault End User.</inlineHelpText>
        <label>AR End User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accelerate_Modules__c</fullName>
        <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
        <label>Accelerate Modules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Blocked_Time_Stamp__c</fullName>
        <label>Access Blocked Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Access_Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_to_Welcome_Email_2__c</fullName>
        <label>Add to Welcome Email 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>salesforce</fullName>
                </value>
                <value>
                    <fullName>general</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_to_Welcome_Email__c</fullName>
        <inlineHelpText>Whether to add this user to the welcome email. &quot;general&quot; will send a generic email, &quot;salesforce&quot; will send a salesforce focused email.</inlineHelpText>
        <label>Add to Welcome Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>salesforce</fullName>
                </value>
                <value>
                    <fullName>general</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoRABIT_Foundation__c</fullName>
        <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
        <label>AutoRABIT Foundation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AutoRABIT_Foundation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoRABIT_Products__c</fullName>
        <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
        <label>AutoRABIT Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awareness__c</fullName>
        <formula>IF( OR( TEXT(Status) = &quot;1-Lead&quot;,TEXT(Status)= &quot;2-Subscriber&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awareness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Dev Ops Consulting</fullName>
                    <label>DevOps Consulting</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AutoRABIT</fullName>
                </value>
                <value>
                    <fullName>BPM Services</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Migile</fullName>
                </value>
                <value>
                    <fullName>Social Champ</fullName>
                </value>
                <value>
                    <fullName>Emerging Technologies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRTEST__c</fullName>
        <label>CRTEST</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendlyCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalendlyCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendly__CalendlyCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalendlyCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <inlineHelpText>Call Result from Orum.</inlineHelpText>
        <label>Call Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeScan_Org_Id__c</fullName>
        <externalId>true</externalId>
        <label>CodeScan Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <description>Field used in Pardot Forms/Pardot Form Handlers.</description>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_URL__c</fullName>
        <description>Field to add company&apos;s website.</description>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <inlineHelpText>Select the competitor</inlineHelpText>
        <label>Competitor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Copado</fullName>
                </value>
                <value>
                    <fullName>Flosum</fullName>
                </value>
                <value>
                    <fullName>Gearset</fullName>
                </value>
                <value>
                    <fullName>Atlassian - Bamboo</fullName>
                    <label>Bamboo</label>
                </value>
                <value>
                    <fullName>Dream factory – Snapshot</fullName>
                    <label>Snapshot</label>
                </value>
                <value>
                    <fullName>Jitterbit</fullName>
                </value>
                <value>
                    <fullName>Odaseva</fullName>
                </value>
                <value>
                    <fullName>AssureClick</fullName>
                </value>
                <value>
                    <fullName>Provar</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Jenkins</fullName>
                </value>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consideration__c</fullName>
        <formula>IF(OR( TEXT(Status) = &quot;1-Lead&quot;, TEXT(Status) = &quot;2-Subscriber&quot;, TEXT(Status) = &quot;Attempted&quot;), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consideration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Name__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <inlineHelpText>Field mapped to Outreach.io Currently Active Sequence Name.</inlineHelpText>
        <label>Current Sequence Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_Status__c</fullName>
        <inlineHelpText>Field mapped to Outreach.io Currently Active Sequence Status.</inlineHelpText>
        <label>Current Sequence Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sequence_User_Name__c</fullName>
        <inlineHelpText>Field mapped to Outreach.io Current Sequence User Name.</inlineHelpText>
        <label>Current Sequence User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Group_For_Lead__c</fullName>
        <formula>MID (  Email  ,
FIND( &quot;@&quot;,  Email ) + 1 ,
FIND ( &quot;.&quot;,  Email , FIND( &quot;@&quot;,  Email ) ) - 1 - FIND( &quot;@&quot;,  Email )
)</formula>
        <label>Customer Group (For Lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Completed_Date_Vault__c</fullName>
        <label>DC Completed Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Completed_Date__c</fullName>
        <description>Field used to specify the date a Discovery call was completed for CI/CD Lead.</description>
        <label>DC Completed Date (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_For_Vault__c</fullName>
        <label>DC Scheduled For (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_For__c</fullName>
        <description>The date the call will take place (as this may change as customer reschedules) for CI/CD Lead.</description>
        <inlineHelpText>The date the call will take place (as this may change as customer reschedules) for CI/CD Lead.</inlineHelpText>
        <label>DC Scheduled For (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_On_Vault__c</fullName>
        <label>DC Scheduled On (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DC_Scheduled_On__c</fullName>
        <description>Field used to specify the date when DC is scheduled for CI/CD Lead.</description>
        <label>DC Scheduled On (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
        <label>ZoomInfo Enrich Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Enrich Only</fullName>
                </value>
                <value>
                    <fullName>Enriched</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>No-Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_InboxAI_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo InboxAI ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Non_Matched_Reason__c</fullName>
        <label>ZoomInfo Non-Matched Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_1_Lead_Status__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Status) = &quot;1-Lead&quot;, Now() - X1_Lead_Status_In__c, X1_Lead_Status_Out__c - X1_Lead_Status_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days lead in 1-Lead status.</inlineHelpText>
        <label>Days in 1-Lead Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_2_Subscriber_Status__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Status) = &quot;2-Subscriber&quot;, Now() - X2_Subscriber_Status_In__c, X2_Subscriber_Status_Out__c - X2_Subscriber_Status_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days lead in 2-Subscriber status.</inlineHelpText>
        <label>Days in 2-Subscriber Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_3_Prospect_Status__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Status) = &quot;3-Prospect&quot;, Now() - X3_Prospect_Status_In__c, X3_Prospect_Status_Out__c - X3_Prospect_Status_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days lead n  3-Prospect status.</inlineHelpText>
        <label>Days in 3-Prospect Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_4_MQL__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Status) = &quot;4-MQL&quot;, Now() - X4_MQL_Status_In__c, X4_MQL_Status_Out__c - X4_MQL_Status_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days lead in 4-MQL status.</inlineHelpText>
        <label>Days in 4-MQL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_5_Intro_Call_Scheduled__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Status) = &quot;5-Intro Call Scheduled&quot;, Now() - X5_Intro_Call_Scheduled_Status_In__c, X5_Intro_Call_Scheduled_Status_Out__c - X5_Intro_Call_Scheduled_Status_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days lead in 5-Intro Call Scheduled status.</inlineHelpText>
        <label>Days in 5-Intro Call Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_6_Intro_Call_Held__c</fullName>
        <description>Created for Reporting Purpose.</description>
        <formula>IF(TEXT( Status) = &quot;5-Intro Call Held&quot;, Now() - X6_Intro_Call_Held_Status_In__c, X6_Intro_Call_Held_Status_Out__c - X6_Intro_Call_Held_Status_In__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days lead in 5-Intro Call Held status.</inlineHelpText>
        <label>Days in 6-Intro Call Held</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_Create__c</fullName>
        <formula>TODAY() - datevalue(CreatedDate)</formula>
        <inlineHelpText>Days since the Lead has been created</inlineHelpText>
        <label>Days since Create</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delete_From_CRM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the lead is no longer needed in the CRM.</description>
        <inlineHelpText>Check if the lead is no longer needed in the CRM.</inlineHelpText>
        <label>Delete From CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Performed_Date_VaultI0__c</fullName>
        <label>Demo Performed Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Performed_Date__c</fullName>
        <description>Field used to specify the date a demo was performed for CI/CD Lead.</description>
        <label>Demo Performed Date (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled_Date1_del__c</fullName>
        <formula>DATEVALUE( Demo_Scheduled_Date__c )</formula>
        <label>Demo Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled_Date_Vault__c</fullName>
        <label>Demo Scheduled Date (Vault)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Scheduled_Date__c</fullName>
        <description>Field used to specify the date when Demo is scheduled</description>
        <label>Demo Scheduled Date (CI/CD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Stage_Pipeline__c</fullName>
        <formula>IF( OR( ISPICKVAL(Status, &quot;5-Intro Call Scheduled&quot;), ISPICKVAL(Status, &quot;6-Intro Call Held&quot;), ISPICKVAL(Status, &quot;7-Discovery Call Scheduled&quot;),  ISPICKVAL(Status, &quot;8-Discovery Call Held&quot;), ISPICKVAL(Status, &quot;9-SAL&quot;)), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Stage Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Stage__c</fullName>
        <formula>IF(OR( TEXT(Status) = &quot;Requested Demo via Web&quot;, TEXT(Status) = &quot;5-Intro Call Scheduled&quot;, TEXT(Status) = &quot;6-Intro Call Held&quot;, TEXT(Status) = &quot;7-Discovery Call Scheduled&quot;, TEXT(Status) = &quot;8-Discovery Call Held&quot;, TEXT(Status) = &quot;9-SAL&quot; ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Early Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eco_System__c</fullName>
        <description>Please indicate the lead ecosystem</description>
        <inlineHelpText>Please indicate the lead ecosystem</inlineHelpText>
        <label>Eco System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Mulesoft</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Code_Blocks__c</fullName>
        <label>Estimated Code Blocks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Call_Attempt__c</fullName>
        <inlineHelpText>Date/Time first Outreach.io activity made for Task Type &quot;Call&quot;.</inlineHelpText>
        <label>First Call Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Conversation_Date__c</fullName>
        <inlineHelpText>Field mapped to First Conversation Date in Hubspot</inlineHelpText>
        <label>First Conversation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Conversation__c</fullName>
        <inlineHelpText>Field mapped to First Conversation in Hubspot.</inlineHelpText>
        <label>First Conversation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Email_Attempt__c</fullName>
        <inlineHelpText>Date/Time first Outreach.io activity made for Task Type &quot;Email&quot;.</inlineHelpText>
        <label>First Email Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>FirstName +&quot; &quot;+ LastName</formula>
        <inlineHelpText>Full name of the Lead</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2Crowd__G2_UUID__c</fullName>
        <externalId>true</externalId>
        <label>G2 UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GDPR_OptIn_Events__c</fullName>
        <label>GDPR OptIn Events</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDPR_OptIn_Newsletter__c</fullName>
        <label>GDPR OptIn Newsletter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDPR_OptIn_Other_Products__c</fullName>
        <label>GDPR OptIn Other Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDPR_OptIn_Updates__c</fullName>
        <label>GDPR OptIn Updates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Geographic region classified as &apos;EMEA&apos;, &apos;APAC&apos;, North America&apos;, and &apos;South America&apos; based on the Lead Country.</description>
        <formula>IF(CONTAINS(&quot;unclear::unknown::None&quot;, Country ), &quot;Not Defined&quot;,
IF(CONTAINS(&quot;Australia::Hong Kong::Malaysia::New Zealand::Singapore::China::Philippines::India::Nepal::Indonesia::Japan::Cambodia::Pakistan::Bangladesh::Thailand::Viet Nam::Korea::Maldives::Sri Lanka::Afganistan::Russia&quot; , Country  ),&quot;APAC&quot;,
IF(CONTAINS(&quot;Antigua and Barbuda::Barbados::Belize::Canada::Costa Rica::Cuba::Dominica::,Dominican Republic::El Salvador::Grenada::Guatemala::Haiti::Honduras::Jamaica::Mexico::Nicaragua::Panama::Saint Kitts and Nevis::Saint Lucia::Saint Vincent and the Grenadines::The Bahamas::Trinidad and Tobago::United States&quot;, Country ), &quot;North America&quot;,
IF(CONTAINS(&quot;Argentina::Bolivia::Norway::Brazil::Chile::Colombia::Ecuador::Falkland Islands::French Guiana::Guyana::Coat of arms of Paraguay.svg::Peru::South Georgia and the South Sandwich Islands::Suriname::Uruguay::Venezuela&quot;, Country  ), &quot;South America&quot;,
&quot;EMEA&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Geographic region based on the Lead Country.</inlineHelpText>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Cloud_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Cloud Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_CodeScan_ID__c</fullName>
        <description>Checks if object has either cloud id or onprem id</description>
        <formula>!ISBLANK(OnPrem_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has CodeScan ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_Lead__c</fullName>
        <label>Hot Lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Super Hot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Implementation Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infrastructure__c</fullName>
        <description>Infrastructure preference</description>
        <label>Infrastructure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shared</fullName>
                </value>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <label>Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Integration</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_SPAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SPAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_Attempt__c</fullName>
        <inlineHelpText>Date/Time last Outreach.io activity made for Task Type &quot;call&quot;.</inlineHelpText>
        <label>Last Call Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Attempt__c</fullName>
        <inlineHelpText>Date/Time last Outreach.io activity made for Task Type &quot;Email&quot;.</inlineHelpText>
        <label>Last Email Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Form_Fill_Date__c</fullName>
        <description>Date when this prospect last filled out a form from our website or LinkedIn or an ad.</description>
        <inlineHelpText>Date when this prospect last filled out a form from</inlineHelpText>
        <label>Last Form Fill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <displayFormat>LE-{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <label>Lead Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>App Exchange</fullName>
                </value>
                <value>
                    <fullName>AutoRABIT</fullName>
                </value>
                <value>
                    <fullName>Bing Ads</fullName>
                </value>
                <value>
                    <fullName>Bing Search</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Calendly</fullName>
                </value>
                <value>
                    <fullName>Call Campaign</fullName>
                </value>
                <value>
                    <fullName>Capterra</fullName>
                </value>
                <value>
                    <fullName>Case Studies</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Contact Us Form</fullName>
                </value>
                <value>
                    <fullName>Contextual Targeting (ABM)</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Customize Targeting (ABM)</fullName>
                </value>
                <value>
                    <fullName>Data.com</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>Demo Request</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing Reference</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Discord</fullName>
                </value>
                <value>
                    <fullName>Discovery.org</fullName>
                </value>
                <value>
                    <fullName>Display Ad (ABM)</fullName>
                </value>
                <value>
                    <fullName>Display Retarget (ABM)</fullName>
                </value>
                <value>
                    <fullName>Dreamforce</fullName>
                </value>
                <value>
                    <fullName>Dreaming</fullName>
                </value>
                <value>
                    <fullName>Ebook</fullName>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>